--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.0
-Flask-SocketIO==5.3.6
-python-socketio==5.9.0
-python-engineio==4.7.1
-qrcode==7.4.2
-Pillow==10.2.0
-gunicorn==21.2.0 
+Flask>=3.0.0
+Flask-SocketIO>=5.3.6
+python-socketio>=5.9.0
+python-engineio>=4.7.1
+qrcode>=7.4.0
+Pillow>=10.4.0
+gunicorn>=21.2.0 
