--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Updated for Python 3.13 compatibility - using flexible version ranges
 Flask>=3.0.0
 Flask-SocketIO>=5.3.6
 python-socketio>=5.9.0
