--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ qrcode>=7.4.0,<8.0.0
 # Image processing for QR codes
 Pillow>=10.0.0,<11.0.0
 
-# Production WSGI server with non-blocking workers
-gunicorn[gevent]>=21.2.0,<22.0.0 
+# Production WSGI server
+gunicorn>=21.2.0,<22.0.0 
