--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ qrcode>=7.4.0,<8.0.0
 Pillow>=10.0.0,<11.0.0
 
 # Production WSGI server
-gunicorn>=21.2.0,<22.0.0 
+gunicorn>=21.2.0,<22.0.0
+
+# Environment variable loading
+python-dotenv>=1.0.0,<2.0.0 
